# robotics_programming_2023

./: .gitignore  README.md
EX3/: README.md
EX3/src/follow_path/: setup.py
EX3/src/follow_path/follow_path/: follow_path.py
EX3/src/follow_path/follow_path/classes/: ros_controller_node.py
EX3/src/test_publisher/: package.xml  setup.py
EX3/src/test_publisher/test_publisher/: .test_publisher.py.swp  test_publisher.py
EX3/src/test_publisher/test_publisher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
EX4/src/face_tracking/: package.xml  setup.py  setup.py.save
EX4/src/face_tracking/face_tracking/: face_tracking.py
src/follow_path/: package.xml  setup.py
src/follow_path/follow_path/: follow_path.py
src/follow_path/follow_path/classes/: ros_controller_node.py
src/follow_path/resource/: path_1
src/go_to_goal/: package.xml  setup.py
src/go_to_goal/go_to_goal/: gotogoal.py
