<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_tracking</name>
  <version>0.0.0</version>
  <description>Ros2 image streamer with face tracking</description>
  <maintainer email="75199661+NMKsas@users.noreply.github.com">sasnmk</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>imutils</exec_depend> 
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
